INCLUDE_DIRECTORIES(
${BULLET_DIR}/src ${BULLET_DIR}/Extras/ConvexHull ${BULLET_COLLADA_DIR}/BulletColladaConverter  ${BULLET_COLLADA_DIR}/LibXML/include ${BULLET_COLLADA_DIR}/COLLADA_DOM/include ${BULLET_COLLADA_DIR}/COLLADA_DOM/include/1.4
)

ADD_LIBRARY(BulletColladaConverter
			ColladaConverter.h
			ColladaConverter.cpp
)

IF (BUILD_SHARED_LIBS)
  TARGET_LINK_LIBRARIES(BulletColladaConverter ColladaDom BulletCollision BulletDynamics)
ENDIF (BUILD_SHARED_LIBS)

#INSTALL of other files requires CMake 2.6
IF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
	IF(INSTALL_EXTRA_LIBS)
		IF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
			INSTALL(TARGETS BulletColladaConverter DESTINATION .)
		ELSE (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
		INSTALL(TARGETS BulletColladaConverter DESTINATION lib)
			INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION include FILES_MATCHING PATTERN "*.h")
		ENDIF (APPLE AND BUILD_SHARED_LIBS AND FRAMEWORK)
	ENDIF (INSTALL_EXTRA_LIBS)
ENDIF (${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION} GREATER 2.5)
